<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".ui.fragment.EditProductFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/management"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                android:id="@+id/textView4" android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toTopOf="@+id/editId"/>
        <EditText
                android:id="@+id/editId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productId"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="1.0"/>
        <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editId" android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@+id/editPrice"/>
        <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productPrice"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/editName"/>
        <Button
                android:id="@+id/btnAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdd"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editPrice"
                app:layout_constraintEnd_toStartOf="@+id/btnDeleteProduct" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:id="@+id/btnDeleteProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDelete"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editPrice" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toEndOf="@+id/btnAddProduct" android:layout_marginStart="107dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>